db 경로 전체적으로 변경

--- a/ToyProjectManagementApp/Views/Cell/NotificationCell.xib
+++ b/ToyProjectManagementApp/Views/Cell/NotificationCell.xib
@@ -27,13 +27,13 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="249" text="content" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLd-Xq-Wkl">
                         <rect key="frame" x="58" y="10.000000000000002" width="325" height="17.666666666666671"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyz-4c-3Mo">
                         <rect key="frame" x="58" y="41.666666666666664" width="325" height="20.333333333333336"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5b1-lx-92x">
@@ -59,6 +59,7 @@
                     <constraint firstItem="fyz-4c-3Mo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="WLd-Xq-Wkl" secondAttribute="bottom" constant="14" id="zeh-kV-LNH"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="cellBadge" destination="5b1-lx-92x" id="o78-Pn-yqB"/>
                 <outlet property="notificaionImageView" destination="Zeq-xq-YDp" id="Bh7-GP-3CW"/>
