--- a/ToyProjectManagementApp/Views/ProjectDetailContent.storyboard
+++ b/ToyProjectManagementApp/Views/ProjectDetailContent.storyboard
@@ -36,7 +36,7 @@
                                             </button>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bhd-JP-pN3">
                                                 <rect key="frame" x="24" y="68.333333333333329" width="380" height="36.333333333333329"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
@@ -127,21 +127,20 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="QT2-lk-acj" userLabel="timeHStackView">
                                                 <rect key="frame" x="24" y="210.66666666666666" width="380" height="92.666666666666657"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Time Circle" translatesAutoresizingMaskIntoConstraints="NO" id="K2o-7y-woM">
-                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="20" id="UTf-To-9vk"/>
-                                                            <constraint firstAttribute="width" constant="20" id="Ynz-ER-slr"/>
-                                                        </constraints>
-                                                    </imageView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="3gm-7Q-Nsw" userLabel="timeVStackView">
-                                                        <rect key="frame" x="40" y="0.0" width="340" height="92.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="380" height="92.666666666666671"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="JMB-lz-yS5">
-                                                                <rect key="frame" x="0.0" y="0.0" width="340" height="34.333333333333336"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="380" height="34.333333333333336"/>
                                                                 <subviews>
+                                                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WrZ-s8-ftT">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="380" height="0.0"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="FGH-De-Md7">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="340" height="34.333333333333336"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="380" height="34.333333333333336"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시작 시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUt-aQ-MoC">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="66.666666666666671" height="34.333333333333336"/>
@@ -150,7 +149,7 @@
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gcf-f8-fEX">
-                                                                                <rect key="frame" x="290" y="0.0" width="50" height="34.333333333333336"/>
+                                                                                <rect key="frame" x="330" y="0.0" width="50" height="34.333333333333336"/>
                                                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" title="Button"/>
                                                                                 <buttonConfiguration key="configuration" style="plain" image="eraser" catalog="system"/>
@@ -160,19 +159,13 @@
                                                                             </button>
                                                                         </subviews>
                                                                     </stackView>
-                                                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WrZ-s8-ftT">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="340" height="0.0"/>
-                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                        <nil key="textColor"/>
-                                                                        <nil key="highlightedColor"/>
-                                                                    </label>
                                                                 </subviews>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AtT-8F-Q3r">
-                                                                <rect key="frame" x="0.0" y="58.333333333333314" width="340" height="34.333333333333343"/>
+                                                                <rect key="frame" x="0.0" y="58.333333333333314" width="380" height="34.333333333333343"/>
                                                                 <subviews>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="RYu-8E-9jD">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="340" height="34.333333333333336"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="380" height="34.333333333333336"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="종료 시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2tM-Wx-gho">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="63.333333333333336" height="34.333333333333336"/>
@@ -181,7 +174,7 @@
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCm-7k-7Fx">
-                                                                                <rect key="frame" x="290" y="0.0" width="50" height="34.333333333333336"/>
+                                                                                <rect key="frame" x="330" y="0.0" width="50" height="34.333333333333336"/>
                                                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" title="Button"/>
                                                                                 <buttonConfiguration key="configuration" style="plain" image="eraser" catalog="system"/>
@@ -192,7 +185,7 @@
                                                                         </subviews>
                                                                     </stackView>
                                                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QKj-d2-nhq">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="340" height="0.0"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="380" height="0.0"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
@@ -330,7 +323,6 @@
     </scenes>
     <resources>
         <image name="Edit" width="20" height="20"/>
-        <image name="Time Circle" width="60" height="60"/>
         <image name="eraser" catalog="system" width="128" height="119"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="primaryColor">
